# vulkan_fem

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  vulkan_fem.sln  vulkan_fem.vcxproj  vulkan_fem.vcxproj.filters
cmake/: FindGLM.cmake  add_shader_library.cmake  empty_cmake_dep.in.cmake  generate_cmake_dep.py
shaders/: CMakeLists.txt  shader.vert  shader.vert.spv  vert.spv
src/: application.hpp  elements.cpp  elements.h  enumerate.h  fem.h  fem_application.cpp  fem_application.h  main.cpp  material.h  model.h  model_factory.cpp  model_factory.h  solver.h  vulcan.cpp  vulcan.h  vulkan_application.h  vulkan_model.cpp  vulkan_model.h
src/fem/: elements.h  fem.h  material.h  model.h  model_factory.h  solver.h
src/rendering/: vulkan_application.h
